# toothlib

./: .gitignore  CMakeLists.txt  NumPredictor.cpp  README.md  api.cpp  main.cpp  model.cpp  move_dll.bat  ori_gum_info.txt  scene.cpp  utils.cpp
cmake/: libigl.cmake  path.h.in
cmake/igl/: igl_include.cmake
include/: NumPredictor.h  api.h  chohotech_gum_deform.h  model.h  path.h  scene.h  utils.h
include/igl/opengl/: ViewerCore.cpp  ViewerCore.h  ViewerData.cpp  ViewerData.h
include/igl/opengl/glfw/: Viewer.cpp  Viewer.h
model/: mlp_cpu.pt  mlp_gpu.pt  stats.json  stats_dense.json
model/func/: data_utils_matrix6D_to_9D_torch.pt  data_utils_matrix9D_to_6D_torch.pt  from_flat_data_joint_data.pt  get_atten_mask.pt  get_data_mask.pt  get_keyframe_pos_indices.pt  get_model_input.pt  set_placeholder_root_pos.pt  train_get_new_pos.pt  train_get_new_rot.pt
